lab6-7 java STAGE 2